--- a/waitingkuo/app/index.html
+++ b/waitingkuo/app/index.html
@@ -47,8 +47,8 @@
               <td>{{REG_NAMEpro}}</td>
               <td>{{CASE_RANGEpro}}</td>
               <td>{{CASE_LOCATIONpro}}</td>
-              <td>{{beginAt}}</td>
-              <td>{{endAt}}</td>
+              <td>{{beginDate}}</td>
+              <td>{{endDate}}</td>
             </tr>
           {{/each}}
         {% endraw %}  
