--- a/waitingkuo/app/index.html
+++ b/waitingkuo/app/index.html
@@ -1,7 +1,7 @@
 <html>
 
 <head>
-  <title>GOV 路見不平</title>
+  <title>g0v 路見不平</title>
   <link href="http://netdna.bootstrapcdn.com/twitter-bootstrap/2.3.2/css/bootstrap-combined.min.css" rel="stylesheet">
   <link rel="stylesheet" href="http://code.jquery.com/ui/1.10.3/themes/smoothness/jquery-ui.css" />
   <script src="http://code.jquery.com/jquery-1.10.0.js"></script>
